samples/_failures_safe/1761653736_bbc64a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_72a26f23.c: In function ‘main’:
./samples/SAFE/__tmp_72a26f23.c:151:43: error: expected ‘)’ at end of input
  151 |     print_log_summary(entries, entry_count
      |                      ~                    ^
      |                                           )
./samples/SAFE/__tmp_72a26f23.c:151:5: error: expected declaration or statement at end of input
  151 |     print_log_summary(entries, entry_count
      |     ^~~~~~~~~~~~~~~~~
